--- a/ClientApp/angular.json
+++ b/ClientApp/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.scss",
+              "node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": []
           },
@@ -100,7 +101,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.scss",
+              "node_modules/ngx-lightbox/lightbox.css"
             ],
             "scripts": []
           }
