--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^15.2.8",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "ngx-lightbox": "^3.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
@@ -47,6 +48,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~4.9.5"
   },
   "overrides": {
